--- a/student_life/notebooks/correlation_and_missing_data_analysis.ipynb
+++ b/student_life/notebooks/correlation_and_missing_data_analysis.ipynb
@@ -34,7 +34,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abhinav/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py:6211: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  sort=sort)\n"
+     ]
+    }
+   ],
    "source": [
     "students = student_utils.get_available_students(definitions.BINNED_ON_VAR_FREQ_DATA_PATH)\n",
     "data = student_utils.get_var_binned_data_for_students(*students)\n",
@@ -52,19 +67,20 @@
      "text": [
       "+-------------------------------+----------+\n",
       "| activity_inference_min        | 0.517565 |\n",
-      "| activity_inference_max        | 0.517565 |\n",
       "| activity_inference_mode       | 0.517565 |\n",
-      "| audio_activity_inference_min  | 0.4068   |\n",
       "| audio_activity_inference_max  | 0.4068   |\n",
+      "| audio_activity_inference_min  | 0.4068   |\n",
       "| audio_activity_inference_mode | 0.4068   |\n",
       "| conv_duration_min_sum         | 0.983573 |\n",
-      "| phonecharge_duration_min_sum  | 0.998638 |\n",
       "| dark_duration_min_sum         | 0.997324 |\n",
       "| hours_slept_sum               | 0.99934  |\n",
-      "| sleep_rating_sum              | 0.99934  |\n",
       "| latitude_mode                 | 0.953511 |\n",
       "| longitude_mode                | 0.953511 |\n",
+      "| phonecharge_duration_min_sum  | 0.998638 |\n",
+      "| phonelock_duration_min_sum    | 0.999966 |\n",
+      "| sleep_rating_sum              | 0.99934  |\n",
       "| stress_level_mode             | 0.999279 |\n",
+      "| student_id                    | 0        |\n",
       "+-------------------------------+----------+\n"
      ]
     }
@@ -76,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +122,7 @@
        "      <th>longitude_mode</th>\n",
        "      <th>conv_duration_min_sum</th>\n",
        "      <th>phonecharge_duration_min_sum</th>\n",
+       "      <th>phonelock_duration_min_sum</th>\n",
        "      <th>dark_duration_min_sum</th>\n",
        "      <th>hours_slept_sum</th>\n",
        "      <th>sleep_rating_sum</th>\n",
@@ -121,6 +138,7 @@
        "      <td>-0.003185</td>\n",
        "      <td>0.141774</td>\n",
        "      <td>0.013701</td>\n",
+       "      <td>0.141701</td>\n",
        "      <td>0.044638</td>\n",
        "      <td>-0.134746</td>\n",
        "      <td>-0.101842</td>\n",
@@ -134,6 +152,7 @@
        "      <td>-0.007664</td>\n",
        "      <td>0.317492</td>\n",
        "      <td>0.135364</td>\n",
+       "      <td>-0.123052</td>\n",
        "      <td>0.115769</td>\n",
        "      <td>-0.025346</td>\n",
        "      <td>0.011872</td>\n",
@@ -147,6 +166,7 @@
        "      <td>0.608431</td>\n",
        "      <td>-0.000969</td>\n",
        "      <td>0.013822</td>\n",
+       "      <td>0.250616</td>\n",
        "      <td>-0.007119</td>\n",
        "      <td>0.022960</td>\n",
        "      <td>-0.003030</td>\n",
@@ -160,6 +180,7 @@
        "      <td>1.000000</td>\n",
        "      <td>-0.002316</td>\n",
        "      <td>0.022623</td>\n",
+       "      <td>-0.055446</td>\n",
        "      <td>-0.016405</td>\n",
        "      <td>-0.011553</td>\n",
        "      <td>-0.084013</td>\n",
@@ -173,6 +194,7 @@
        "      <td>-0.002316</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.139313</td>\n",
+       "      <td>-0.256592</td>\n",
        "      <td>0.158426</td>\n",
        "      <td>0.006696</td>\n",
        "      <td>0.038983</td>\n",
@@ -186,10 +208,25 @@
        "      <td>0.022623</td>\n",
        "      <td>0.139313</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.287503</td>\n",
        "      <td>0.240549</td>\n",
        "      <td>0.093510</td>\n",
        "      <td>0.158085</td>\n",
        "      <td>0.042141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>phonelock_duration_min_sum</th>\n",
+       "      <td>0.141701</td>\n",
+       "      <td>-0.123052</td>\n",
+       "      <td>0.250616</td>\n",
+       "      <td>-0.055446</td>\n",
+       "      <td>-0.256592</td>\n",
+       "      <td>0.287503</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.475075</td>\n",
+       "      <td>0.289927</td>\n",
+       "      <td>0.387484</td>\n",
+       "      <td>-0.178156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>dark_duration_min_sum</th>\n",
@@ -199,6 +236,7 @@
        "      <td>-0.016405</td>\n",
        "      <td>0.158426</td>\n",
        "      <td>0.240549</td>\n",
+       "      <td>0.475075</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.166808</td>\n",
        "      <td>0.141054</td>\n",
@@ -212,6 +250,7 @@
        "      <td>-0.011553</td>\n",
        "      <td>0.006696</td>\n",
        "      <td>0.093510</td>\n",
+       "      <td>0.289927</td>\n",
        "      <td>0.166808</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.633675</td>\n",
@@ -225,6 +264,7 @@
        "      <td>-0.084013</td>\n",
        "      <td>0.038983</td>\n",
        "      <td>0.158085</td>\n",
+       "      <td>0.387484</td>\n",
        "      <td>0.141054</td>\n",
        "      <td>0.633675</td>\n",
        "      <td>1.000000</td>\n",
@@ -238,6 +278,7 @@
        "      <td>0.004852</td>\n",
        "      <td>-0.025004</td>\n",
        "      <td>0.042141</td>\n",
+       "      <td>-0.178156</td>\n",
        "      <td>0.030644</td>\n",
        "      <td>-0.038155</td>\n",
        "      <td>0.055987</td>\n",
@@ -255,6 +296,7 @@
        "longitude_mode                               -0.003185   \n",
        "conv_duration_min_sum                         0.141774   \n",
        "phonecharge_duration_min_sum                  0.013701   \n",
+       "phonelock_duration_min_sum                    0.141701   \n",
        "dark_duration_min_sum                         0.044638   \n",
        "hours_slept_sum                              -0.134746   \n",
        "sleep_rating_sum                             -0.101842   \n",
@@ -267,6 +309,7 @@
        "longitude_mode                                     -0.007664       0.608431   \n",
        "conv_duration_min_sum                               0.317492      -0.000969   \n",
        "phonecharge_duration_min_sum                        0.135364       0.013822   \n",
+       "phonelock_duration_min_sum                         -0.123052       0.250616   \n",
        "dark_duration_min_sum                               0.115769      -0.007119   \n",
        "hours_slept_sum                                    -0.025346       0.022960   \n",
        "sleep_rating_sum                                    0.011872      -0.003030   \n",
@@ -279,6 +322,7 @@
        "longitude_mode                       1.000000              -0.002316   \n",
        "conv_duration_min_sum               -0.002316               1.000000   \n",
        "phonecharge_duration_min_sum         0.022623               0.139313   \n",
+       "phonelock_duration_min_sum          -0.055446              -0.256592   \n",
        "dark_duration_min_sum               -0.016405               0.158426   \n",
        "hours_slept_sum                     -0.011553               0.006696   \n",
        "sleep_rating_sum                    -0.084013               0.038983   \n",
@@ -291,10 +335,24 @@
        "longitude_mode                                     0.022623   \n",
        "conv_duration_min_sum                              0.139313   \n",
        "phonecharge_duration_min_sum                       1.000000   \n",
+       "phonelock_duration_min_sum                         0.287503   \n",
        "dark_duration_min_sum                              0.240549   \n",
        "hours_slept_sum                                    0.093510   \n",
        "sleep_rating_sum                                   0.158085   \n",
        "stress_level_mode                                  0.042141   \n",
+       "\n",
+       "                               phonelock_duration_min_sum  \\\n",
+       "activity_inference_mode                          0.141701   \n",
+       "audio_activity_inference_mode                   -0.123052   \n",
+       "latitude_mode                                    0.250616   \n",
+       "longitude_mode                                  -0.055446   \n",
+       "conv_duration_min_sum                           -0.256592   \n",
+       "phonecharge_duration_min_sum                     0.287503   \n",
+       "phonelock_duration_min_sum                       1.000000   \n",
+       "dark_duration_min_sum                            0.475075   \n",
+       "hours_slept_sum                                  0.289927   \n",
+       "sleep_rating_sum                                 0.387484   \n",
+       "stress_level_mode                               -0.178156   \n",
        "\n",
        "                               dark_duration_min_sum  hours_slept_sum  \\\n",
        "activity_inference_mode                     0.044638        -0.134746   \n",
@@ -303,6 +361,7 @@
        "longitude_mode                             -0.016405        -0.011553   \n",
        "conv_duration_min_sum                       0.158426         0.006696   \n",
        "phonecharge_duration_min_sum                0.240549         0.093510   \n",
+       "phonelock_duration_min_sum                  0.475075         0.289927   \n",
        "dark_duration_min_sum                       1.000000         0.166808   \n",
        "hours_slept_sum                             0.166808         1.000000   \n",
        "sleep_rating_sum                            0.141054         0.633675   \n",
@@ -315,6 +374,7 @@
        "longitude_mode                        -0.084013           0.004852  \n",
        "conv_duration_min_sum                  0.038983          -0.025004  \n",
        "phonecharge_duration_min_sum           0.158085           0.042141  \n",
+       "phonelock_duration_min_sum             0.387484          -0.178156  \n",
        "dark_duration_min_sum                  0.141054           0.030644  \n",
        "hours_slept_sum                        0.633675          -0.038155  \n",
        "sleep_rating_sum                       1.000000           0.055987  \n",
@@ -329,7 +389,7 @@
     "student_data_1 = students_data[students_data['student_id']==35]\n",
     "student_data_1_mode_sum = students_data.loc[:, \n",
     "[\"activity_inference_mode\",\"audio_activity_inference_mode\",\"latitude_mode\",\n",
-    "\"longitude_mode\",\"conv_duration_min_sum\",\"phonecharge_duration_min_sum\",\n",
+    "\"longitude_mode\",\"conv_duration_min_sum\",\"phonecharge_duration_min_sum\", \"phonelock_duration_min_sum\",\n",
     "\"dark_duration_min_sum\",\"hours_slept_sum\",\"sleep_rating_sum\",\"stress_level_mode\"]\n",
     "]\n",
     "corr = student_data_1_mode_sum.corr('pearson')\n",
@@ -348,10 +408,18 @@
     "audio_inference - +activity, -stress, +conv, +phonecharge  \n",
     "conversation_duration - +activity, +phonecharge, +dark  \n",
     "phonecharge - +audio, +stress(minor), +dark_duration, +sleep  \n",
+    "phonelock - +phonecharge, +sleep, +sleep_rating\n",
     "sleep_duration - +sleep_rating(very high)  \n",
     "sleep_rating - +sleep_duration(veryfy)  \n",
     "stress_level - -activity, -conv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
