--- a/student_life/notebooks/generate_student_life_pickle.ipynb
+++ b/student_life/notebooks/generate_student_life_pickle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "importlib.reload(student_life_var_binned_data_getter)\n",
     "importlib.reload(student_utils)\n",
     "\n",
-    "data = student_life_var_binned_data_getter.get_data_for_pkl_file()\n",
+    "data = student_life_var_binned_data_getter.get_data_for_pkl_file(35)\n",
     "\n",
     "outfile = open('../data/training_data/student_life_pickle.pkl', 'wb')\n",
     "pickle.dump(data, outfile)\n",
@@ -35,19 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['35_3_29', '35_3_30', '35_3_31', '35_4_2', '35_4_3', '35_4_4', '35_4_5', '35_4_6', '35_4_9', '35_4_10', '35_4_11', '35_4_12', '35_4_13', '35_4_14', '35_4_15', '35_4_16', '35_4_18', '35_4_20', '35_4_21', '35_4_23', '35_4_29', '35_4_30', '35_5_2', '35_5_7', '35_5_8', '35_5_12', '35_5_19', '35_5_21', '35_5_22'])\n"
+      "[[0.0, -1.0, 0.0, 814.0, 490.0, 699.0, 43.70519274, -72.28314014, 13.0, 3.0], [-1.0, 0.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0]]\n"
      ]
     }
    ],
    "source": [
-    "print(data['data'].keys())"
+    "print(data['data']['35_3_29'][0][:2])"
    ]
   },
   {
