--- a/student_life/notebooks/generate_student_life_pickle.ipynb
+++ b/student_life/notebooks/generate_student_life_pickle.ipynb
@@ -2,9 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/nsimsiri/Documents/code/ml/MultiRes/student_life\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<module 'src.utils.student_utils' from '/Users/nsimsiri/Documents/code/ml/MultiRes/student_life/src/utils/student_utils.py'>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os \n",
     "import sys\n",
@@ -14,6 +32,8 @@
     "# sys.path.insert(0, os.path.join(cwd, \"../\"))\n",
     "# sys.path.insert(0, os.path.join(cwd, \"../student_life/\"))\n",
     "# sys.path.insert(0, os.path.join(cwd, \"../student_life/src/\"))\n",
+    "print(module_path)\n",
+    "sys.path.append(module_path)\n",
     "\n",
     "import copy\n",
     "import pickle\n",
@@ -25,7 +45,15 @@
     "from src.data_getter import student_life_var_binned_data_getter\n",
     "importlib.reload(student_life_var_binned_data_getter)\n",
     "importlib.reload(student_utils)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data = student_life_var_binned_data_getter.get_data_for_pkl_file()\n",
     "\n",
     "outfile = open('../data/training_data/student_life_pickle.pkl', 'wb')\n",
@@ -55,14 +83,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.5",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -74,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
