GRU trainer and refactoring.

--- a/student_life/notebooks/generate_student_life_pickle.ipynb
+++ b/student_life/notebooks/generate_student_life_pickle.ipynb
@@ -2,18 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['3_29', '3_30', '3_31', '4_2', '4_3', '4_4', '4_5', '4_6', '4_9', '4_10', '4_11', '4_12', '4_13', '4_14', '4_15', '4_16']\n",
+      "['4_18', '4_20', '4_21', '4_23', '4_29']\n",
+      "['4_30', '5_2', '5_7', '5_8', '5_12', '5_19', '5_21']\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "import sys\n",
     "\n",
     "cwd = os.getcwd()\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
-    "# sys.path.insert(0, os.path.join(cwd, \"../\"))\n",
-    "# sys.path.insert(0, os.path.join(cwd, \"../student_life/\"))\n",
-    "# sys.path.insert(0, os.path.join(cwd, \"../student_life/src/\"))\n",
+    "sys.path.insert(0, os.path.join(cwd, \"../\"))\n",
+    "sys.path.insert(0, os.path.join(cwd, \"../student_life/\"))\n",
+    "sys.path.insert(0, os.path.join(cwd, \"../student_life/src/\"))\n",
+    "sys.path.insert(0, os.path.join(cwd, \"../student_life/src/bin/\"))\n",
     "\n",
     "import copy\n",
     "import pickle\n",
@@ -32,30 +43,6 @@
     "pickle.dump(data, outfile)\n",
     "outfile.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.0, -1.0, 0.0, 814.0, 490.0, 699.0, 43.70519274, -72.28314014, 13.0, 3.0], [-1.0, 0.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data['data']['35_3_29'][0][:2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
