--- a/student_life/notebooks/generate_student_life_pickle.ipynb
+++ b/student_life/notebooks/generate_student_life_pickle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "<module 'src.utils.student_utils' from '/Users/nsimsiri/Documents/code/ml/MultiRes/student_life/src/utils/student_utils.py'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
     "sys.path.append(module_path)\n",
     "\n",
     "import copy\n",
-    "import pickle\n",
+    "import pickle as pk\n",
     "import importlib\n",
     "import src.utils.student_utils as student_utils\n",
     "\n",
@@ -44,8 +44,16 @@
     "from IPython.display import display\n",
     "from src.data_getter import student_life_var_binned_data_getter\n",
     "importlib.reload(student_life_var_binned_data_getter)\n",
-    "importlib.reload(student_utils)\n",
-    "\n"
+    "importlib.reload(student_utils)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle_path = '../data/training_data/student_life_pickle.pkl'"
    ]
   },
   {
@@ -56,14 +64,14 @@
    "source": [
     "data = student_life_var_binned_data_getter.get_data_for_pkl_file()\n",
     "\n",
-    "outfile = open('../data/training_data/student_life_pickle.pkl', 'wb')\n",
+    "outfile = open(pickle_path, 'wb')\n",
     "pickle.dump(data, outfile)\n",
     "outfile.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -80,12 +88,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(pickle_path, 'rb') as pickle_file:\n",
+    "    data = pk.load(pickle_file)\n",
+    "    print(type(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "dict_keys(['train_ids', 'val_ids', 'test_ids', 'data'])\n",
+      "17\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(data))\n",
+    "print(data.keys())\n",
+    "print(len(data['train_ids']))\n",
+    "print(len(data['val_ids']))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with "
-   ]
+   "source": []
   }
  ],
  "metadata": {
