--- a/Physionet_rev/[Physionet]DBM.ipynb
+++ b/Physionet_rev/[Physionet]DBM.ipynb
@@ -2,24 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'0.4.0'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'RNN_osaka'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-78e6be28e303>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbatchify\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mbatchify\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdbm\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdbm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdbm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRNN_osaka\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprecision_recall_fscore_support\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'RNN_osaka'"
+     ]
     }
    ],
    "source": [
+    "import os, sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import cPickle as pickle\n",
+    "# import cPickle as pickle\n",
     "from random import shuffle\n",
     "from tqdm import tqdm\n",
     "# import matplotlib.pyplot as plt\n",
@@ -32,12 +34,13 @@
     "import torch.optim as optim\n",
     "import torch.autograd as autograd\n",
     "\n",
-    "import evaluate_plot as eval_plot\n",
+    "# import evaluate_plot as eval_plot\n",
     "import batchify as batchify\n",
     "import dbm as dbm\n",
+    "from dbm import RNN_osaka\n",
     "from sklearn.metrics import precision_recall_fscore_support\n",
     "\n",
-    "import os\n",
+    "\n",
     "# 1 starts the process on GPU-0\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = '0'\n",
     "torch.__version__"
@@ -4907,21 +4910,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "python3_6",
    "language": "python",
-   "name": "python2"
+   "name": "python3_6"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
