--- a/student_life/notebooks/data_wrangle.ipynb
+++ b/student_life/notebooks/data_wrangle.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -255,10 +255,12 @@
      "text": [
       "['35_3_29', '35_3_30', '35_3_31', '35_4_2', '35_4_3', '35_4_4', '35_4_5', '35_4_6', '35_4_9', '35_4_10', '35_4_11', '35_4_12', '35_4_13', '35_4_14', '35_4_15', '35_4_16', '35_4_18']\n",
       "35_3_29\n",
+      "4\n",
       "1440\n",
-      "10\n",
-      "[0.0, -1.0, 0.0, 814.0, 490.0, 699.0, 43.70519274, -72.28314014, 13.0, 3.0]\n",
-      "[-1.0, 0.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0]\n"
+      "1440\n",
+      "1440\n",
+      "1\n",
+      "0\n"
      ]
     }
    ],
@@ -267,10 +269,14 @@
     "idx_i = data['train_ids'][0]\n",
     "print(idx_i)\n",
     "row = data['data'][idx_i]\n",
+    "print(len(row))\n",
     "print(len(row[0]))\n",
-    "print(len(row[0][0]))\n",
-    "print(row[0][0])\n",
-    "print(row[0][1])\n"
+    "print(len(row[1]))\n",
+    "print(len(row[2]))\n",
+    "print(row[3])\n",
+    "print(data['data'][data['train_ids'][1]][3])\n",
+    "# print(row[0][0])\n",
+    "# print(row[0][1])\n"
    ]
   },
   {
