extend evaluation to support arbitrary number of classes

--- a/student_life/notebooks/data_wrangle.ipynb
+++ b/student_life/notebooks/data_wrangle.ipynb
@@ -274,17 +274,50 @@
     "print(len(row[1]))\n",
     "print(len(row[2]))\n",
     "print(row[3])\n",
-    "print(data['data'][data['train_ids'][1]][3])\n",
-    "# print(row[0][0])\n",
-    "# print(row[0][1])\n"
+    "print(data['data'][data['train_ids'][1]][3])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import precision_recall_fscore_support\n",
+    "preds = [0, 3, 2, 3, 3]\n",
+    "actual = [1, 2, 3, 3, 2]\n",
+    "f1_arr = precision_recall_fscore_support(actual, preds, labels = [0,1,2,3,4])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ = pd.DataFrame(list(f1_arr),columns = [0,1,2,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     0    1    2         3    4\n",
+      "0  0.0  0.0  0.0  0.333333  0.0\n",
+      "1  0.0  0.0  0.0  0.500000  0.0\n",
+      "2  0.0  0.0  0.0  0.400000  0.0\n",
+      "3  0.0  1.0  2.0  2.000000  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_)"
+   ]
   },
   {
    "cell_type": "code",
