--- a/Physionet_rev/[Student-Life] TBM.ipynb
+++ b/Physionet_rev/[Student-Life] TBM.ipynb
@@ -11,18 +11,9 @@
      "text": [
       "/Users/nsimsiri/Documents/code/ml/MultiRes/student_life\n",
       "/Users/nsimsiri/Documents/code/ml/MultiRes/Physionet_rev\n",
-      "False\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'student_life_var_binned_data_getter'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-029353f51bea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdefinitions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdefinitions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_getter\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstudent_life_var_binned_data_getter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0mimportlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent_life_var_binned_data_getter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mimportlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent_utils\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'student_life_var_binned_data_getter'"
+      "False\n",
+      "<module 'evaluate_plot' from '/Users/nsimsiri/Documents/code/ml/MultiRes/Physionet_rev/evaluate_plot.py'>\n",
+      "sys.version_info(major=3, minor=6, micro=0, releaselevel='final', serial=0)\n"
      ]
     }
    ],
@@ -64,8 +55,6 @@
     "import src.utils.student_utils as student_utils\n",
     "import src.definitions as definitions\n",
     "from IPython.display import display\n",
-    "from src.data_getter import student_life_var_binned_data_getter\n",
-    "importlib.reload(student_life_var_binned_data_getter)\n",
     "importlib.reload(student_utils)\n",
     "\n",
     "# 1 starts the process on GPU-0\n",
@@ -78,18 +67,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torch.cuda.is_available()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pickle_path /Users/nsimsiri/Documents/code/ml/MultiRes/student_life/data/training_data/student_life_pickle.pkl\n",
+      "model_config_path /Users/nsimsiri/Documents/code/ml/MultiRes/student_life/models\n"
+     ]
+    }
+   ],
    "source": [
     "data = None\n",
     "pickle_path = student_life_path + '/data/training_data/student_life_pickle.pkl'\n",
@@ -100,9 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['train_ids', 'val_ids', 'test_ids', 'data'])\n"
+     ]
+    }
+   ],
    "source": [
     "with open(pickle_path, 'rb') as pickle_file:\n",
     "    data = pickle.load(pickle_file)\n",
@@ -111,9 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/nsimsiri/Documents/code/ml/MultiRes/student_life/models/TBM-SL-.pt\n"
+     ]
+    }
+   ],
    "source": [
     "params = {'bilstm_flag':True,\n",
     "        'hidden_dim' : 32,\n",
@@ -136,9 +161,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEVICE: cpu\n",
+      "Dot Attention is being used!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nsimsiri/anaconda2/envs/python3/lib/python3.6/site-packages/torch/nn/modules/rnn.py:46: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.9 and num_layers=1\n",
+      "  \"num_layers={}\".format(dropout, num_layers))\n"
+     ]
+    }
+   ],
    "source": [
     "model_RNN = tbm.RNN_osaka(params)\n",
     "loss_function = nn.NLLLoss()\n",
@@ -147,9 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NORMAL mode with Flags\n"
+     ]
+    }
+   ],
    "source": [
     "mode = 'normal'\n",
     "if(mode=='normal'):\n",
@@ -160,9 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==x====x====x====x====x====x====x====x====x====x====x====x====x====x====x====x====x====x====x====x==\n",
+      "Data Statistics\n",
+      "Train Data: 17\n",
+      "Val Data: 5\n",
+      "Test Data: 7\n",
+      "==x====x====x====x====x====x====x====x====x====x====x====x====x====x====x====x====x====x====x====x==\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 1\n",
     "epochs = 45\n",
@@ -178,9 +241,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/17 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEVICE: cpu\n",
+      "=#==#==#==#==#=0=#==#==#==#==#=\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 17/17 [00:18<00:00,  1.07s/it]\n",
+      "/Users/nsimsiri/anaconda2/envs/python3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/nsimsiri/anaconda2/envs/python3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1145: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n",
+      "  0%|          | 0/17 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========Epoch No:0==========\n",
+      "Training Loss: 29.454280376434326\n",
+      "========\n",
+      "Train: (0.0320855614973262, 0.11764705882352941, 0.05042016806722689, None)\n",
+      "                  0    1    2    3    4\n",
+      "Precision  0.181818  0.0  0.0  0.0  0.0\n",
+      "Recall     0.666667  0.0  0.0  0.0  0.0\n",
+      "F-score    0.285714  0.0  0.0  0.0  0.0\n",
+      "Count      3.000000  6.0  7.0  0.0  1.0\n",
+      "=#==#==#==#==#=1=#==#==#==#==#=\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 17/17 [00:18<00:00,  1.09s/it]\n",
+      "  0%|          | 0/17 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========Epoch No:1==========\n",
+      "Training Loss: 29.258102416992188\n",
+      "========\n",
+      "Train: (0.44385026737967914, 0.17647058823529413, 0.15336134453781514, None)\n",
+      "                  0    1         2    3    4\n",
+      "Precision  0.181818  0.0  1.000000  0.0  0.0\n",
+      "Recall     0.666667  0.0  0.142857  0.0  0.0\n",
+      "F-score    0.285714  0.0  0.250000  0.0  0.0\n",
+      "Count      3.000000  6.0  7.000000  0.0  1.0\n",
+      "=#==#==#==#==#=2=#==#==#==#==#=\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 17/17 [00:18<00:00,  1.06s/it]\n",
+      "  0%|          | 0/17 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========Epoch No:2==========\n",
+      "Training Loss: 29.139276146888733\n",
+      "========\n",
+      "Train: (0.44385026737967914, 0.17647058823529413, 0.15336134453781514, None)\n",
+      "                  0    1         2    3    4\n",
+      "Precision  0.181818  0.0  1.000000  0.0  0.0\n",
+      "Recall     0.666667  0.0  0.142857  0.0  0.0\n",
+      "F-score    0.285714  0.0  0.250000  0.0  0.0\n",
+      "Count      3.000000  6.0  7.000000  0.0  1.0\n",
+      "=#==#==#==#==#=3=#==#==#==#==#=\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 17/17 [00:18<00:00,  1.06s/it]\n",
+      "  0%|          | 0/17 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========Epoch No:3==========\n",
+      "Training Loss: 29.017302632331848\n",
+      "========\n",
+      "Train: (0.44385026737967914, 0.17647058823529413, 0.15336134453781514, None)\n",
+      "                  0    1         2    3    4\n",
+      "Precision  0.181818  0.0  1.000000  0.0  0.0\n",
+      "Recall     0.666667  0.0  0.142857  0.0  0.0\n",
+      "F-score    0.285714  0.0  0.250000  0.0  0.0\n",
+      "Count      3.000000  6.0  7.000000  0.0  1.0\n",
+      "=#==#==#==#==#=4=#==#==#==#==#=\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 17/17 [00:19<00:00,  1.13s/it]\n",
+      "  0%|          | 0/17 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========Epoch No:4==========\n",
+      "Training Loss: 28.86371147632599\n",
+      "========\n",
+      "Train: (0.44705882352941173, 0.23529411764705882, 0.23730517848164906, None)\n",
+      "                  0    1         2    3    4\n",
+      "Precision  0.200000  0.0  1.000000  0.0  0.0\n",
+      "Recall     0.666667  0.0  0.285714  0.0  0.0\n",
+      "F-score    0.307692  0.0  0.444444  0.0  0.0\n",
+      "Count      3.000000  6.0  7.000000  0.0  1.0\n",
+      "=#==#==#==#==#=5=#==#==#==#==#=\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 35%|███▌      | 6/17 [00:07<00:13,  1.23s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-0341e7e6bbc6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtag_scores\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurr_labels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtag_scores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mtotal_loss\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda2/envs/python3/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    100\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \"\"\"\n\u001b[0;32m--> 102\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda2/envs/python3/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     88\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     89\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "start_epoch = 0\n",
     "end_epoch = 90\n",
@@ -214,31 +438,31 @@
     "                       columns = list(range(len(target_classes))))\n",
     "    df_tr.index = ['Precision','Recall','F-score','Count']\n",
     "    prf_tr = precision_recall_fscore_support(actual_train, preds_train, average='weighted')\n",
-    "#     prf_test, df_test = eval_plot.evaluate_dbm(model_RNN, data, 'test_ids', target_n=target_classes)\n",
+    "    prf_test, df_test = eval_plot.evaluate_dbm(model_RNN, data, 'test_ids', target_n=target_classes)\n",
     "\n",
-    "#     prf_val, df_val = eval_plot.evaluate_dbm(model_RNN, data, 'val_ids', target_n=target_classes)\n",
+    "    prf_val, df_val = eval_plot.evaluate_dbm(model_RNN, data, 'val_ids', target_n=target_classes)\n",
     "    \n",
-    "#     df_all = pd.concat([df_tr, df_val, df_test],axis=1)\n",
-    "#     dict_df_prf_mod['Epoch'+str(iter_)] = df_all\n",
+    "    df_all = pd.concat([df_tr, df_val, df_test],axis=1)\n",
+    "    dict_df_prf_mod['Epoch'+str(iter_)] = df_all\n",
     "    \n",
     "    print('=='*5 + \"Epoch No:\"+str(iter_) +\"==\"*5)\n",
     "    print(\"Training Loss: \"+str(total_loss))\n",
     "    print(\"==\"*4)\n",
     "    print(\"Train: \" + str(prf_tr))\n",
     "    print(df_tr)\n",
-    "#     print(\"--\"*4)\n",
-    "#     print(\"Val: \" + str(prf_val))\n",
-    "#     print(df_val)\n",
-    "#     print(\"--\"*4)\n",
-    "#     print(\"Test: \" + str(prf_test))\n",
-    "#     print(df_test)\n",
-    "#     print('=='*40)\n",
-    "#     print('\\n')\n",
+    "    print(\"--\"*4)\n",
+    "    print(\"Val: \" + str(prf_val))\n",
+    "    print(df_val)\n",
+    "    print(\"--\"*4)\n",
+    "    print(\"Test: \" + str(prf_test))\n",
+    "    print(df_test)\n",
+    "    print('=='*40)\n",
+    "    print('\\n')\n",
     "\n",
-    "#     eval_plot.plot_graphs(dict_df_prf_mod, 'F-score', \n",
-    "#                   model_path + \"/\" +model_name+str(iter_)+'.png',\n",
-    "#                   0, iter_+1, \n",
-    "#                   model_name, target_n=len(target_classes))\n",
+    "    eval_plot.plot_graphs(dict_df_prf_mod, 'F-score', \n",
+    "                  model_path + \"/\" +model_name+str(iter_)+'.png',\n",
+    "                  0, iter_+1, \n",
+    "                  model_name, target_n=len(target_classes))\n",
     "\n",
     "#     if(save_flag):\n",
     "#         torch.save(model_RNN, '../../Models/'+model_name+str(iter_)+'.pt')\n",
