added cuda() to model when training to fix tensors living on both cpu/gpu

--- a/Physionet_rev/Untitled.ipynb
+++ b/Physionet_rev/Untitled.ipynb
@@ -11,7 +11,7 @@
      "text": [
       "/home/nsimsiri/MultiRes/student_life\n",
       "/home/nsimsiri/MultiRes/Physionet_rev\n",
-      "False\n",
+      "True\n",
       "9.1.85\n",
       "0.4.0\n",
       "<module 'evaluate_plot' from '/home/nsimsiri/MultiRes/Physionet_rev/evaluate_plot.py'>\n",
@@ -87,6 +87,87 @@
     "p = subprocess.Popen([\"nvcc\", \"--version\"], stdout=subprocess.PIPE)\n",
     "\n",
     "print(p.communicate())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ft = torch.cuda.FloatTensor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ft = ft.to(torch.device(\"cuda\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ft)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lt = torch.LongTensor().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([], dtype=torch.int64, device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([], dtype=torch.int64, device='cuda:0')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lt.to(torch.device('cuda'))"
    ]
   },
   {
