Updated GRUD training notebook. Add statistics on missing data.

--- a/student_life/notebooks/generate_student_life_pickle.ipynb
+++ b/student_life/notebooks/generate_student_life_pickle.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['3_29', '3_30', '3_31', '4_2', '4_3', '4_4', '4_5', '4_6', '4_9', '4_10', '4_11', '4_12', '4_13', '4_14', '4_15', '4_16']\n",
-      "['4_18', '4_20', '4_21', '4_23', '4_29']\n",
-      "['4_30', '5_2', '5_7', '5_8', '5_12', '5_19', '5_21']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os \n",
     "import sys\n",
@@ -33,16 +23,23 @@
     "\n",
     "import src.definitions as definitions\n",
     "from IPython.display import display\n",
-    "from src.data_getter import student_life_var_binned_data_getter\n",
-    "importlib.reload(student_life_var_binned_data_getter)\n",
+    "from src.data_manager import student_life_var_binned_data_manager\n",
+    "importlib.reload(student_life_var_binned_data_manager)\n",
     "importlib.reload(student_utils)\n",
     "\n",
-    "data = student_life_var_binned_data_getter.get_data_for_pkl_file(35)\n",
+    "data = student_life_var_binned_data_manager.get_data_for_training_in_dict_format(35)\n",
     "\n",
-    "outfile = open('../data/training_data/student_life_pickle.pkl', 'wb')\n",
+    "outfile = open('../data/training_data/student_35_3_hr_b_1_hr_a_mean_filled_data.pkl', 'wb')\n",
     "pickle.dump(data, outfile)\n",
     "outfile.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
