fixed nan on aggreagated features column issues

--- a/student_life/notebooks/generate_student_life_pickle.ipynb
+++ b/student_life/notebooks/generate_student_life_pickle.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['3_29', '3_30', '3_31', '4_2', '4_3', '4_4', '4_5', '4_6', '4_9', '4_10', '4_11', '4_12', '4_13', '4_14', '4_15', '4_16']\n",
-      "['4_18', '4_20', '4_21', '4_23', '4_29']\n",
-      "['4_30', '5_2', '5_7', '5_8', '5_12', '5_19', '5_21']\n"
+      "/Users/nsimsiri/Documents/code/ml/MultiRes/student_life\n"
      ]
     }
    ],
@@ -27,90 +25,207 @@
     "sys.path.insert(0, os.path.join(cwd, \"../student_life/src/bin/\"))\n",
     "\n",
     "import copy\n",
-    "import pickle as pk\n",
+    "import pickle\n",
     "import importlib\n",
     "import src.utils.student_utils as student_utils\n",
     "\n",
     "import src.definitions as definitions\n",
     "from IPython.display import display\n",
-    "from src.data_getter import student_life_var_binned_data_getter\n",
-    "importlib.reload(student_life_var_binned_data_getter)\n",
+    "from src.data_manager import student_life_var_binned_data_manager\n",
+    "importlib.reload(student_life_var_binned_data_manager)\n",
     "importlib.reload(student_utils)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = student_life_var_binned_data_getter.get_data_for_pkl_file()\n",
     "\n",
-    "data = student_life_var_binned_data_getter.get_data_for_pkl_file(35)\n",
+    "print(module_path)\n",
+    "student_life_path = module_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "missing True\n",
+      "total:\n",
+      " ['day_of_week', 'epoch_of_day', 'time_since_last_label', 'time_to_next_label', 'activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'dark_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'latitude_mode', 'longitude_mode', 'hours_slept_sum', 'sleep_rating_sum']\n",
+      "\n",
+      "student_data\n",
+      " ['student_id', 'activity_inference_min', 'activity_inference_max', 'activity_inference_mode', 'audio_activity_inference_min', 'audio_activity_inference_max', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'dark_duration_min_sum', 'hours_slept_sum', 'sleep_rating_sum', 'latitude_mode', 'longitude_mode', 'stress_level_mode']\n",
+      "\n",
+      "missing_values\n",
+      " ['student_id', 'activity_inference_min', 'activity_inference_max', 'activity_inference_mode', 'audio_activity_inference_min', 'audio_activity_inference_max', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'dark_duration_min_sum', 'hours_slept_sum', 'sleep_rating_sum', 'latitude_mode', 'longitude_mode', 'stress_level_mode']\n",
+      "\n",
+      "training_values\n",
+      " ['day_of_week', 'epoch_of_day', 'time_since_last_label', 'time_to_next_label', 'activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'dark_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'latitude_mode', 'longitude_mode', 'hours_slept_sum', 'sleep_rating_sum']\n",
+      "\n",
+      "missing_values\n",
+      " ['day_of_week', 'epoch_of_day', 'time_since_last_label', 'time_to_next_label', 'activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'dark_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'latitude_mode', 'longitude_mode', 'hours_slept_sum', 'sleep_rating_sum']\n",
+      "                     day_of_week  epoch_of_day  time_since_last_label  \\\n",
+      "2013-03-29 00:00:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:01:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:02:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:03:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:04:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:05:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:06:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:07:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:08:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:09:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:10:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:11:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:12:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:13:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:14:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:15:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:16:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:17:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:18:00         -1.0          -1.0                   -1.0   \n",
+      "2013-03-29 00:19:00         -1.0          -1.0                   -1.0   \n",
+      "\n",
+      "                     time_to_next_label  \n",
+      "2013-03-29 00:00:00                -1.0  \n",
+      "2013-03-29 00:01:00                -1.0  \n",
+      "2013-03-29 00:02:00                -1.0  \n",
+      "2013-03-29 00:03:00                -1.0  \n",
+      "2013-03-29 00:04:00                -1.0  \n",
+      "2013-03-29 00:05:00                -1.0  \n",
+      "2013-03-29 00:06:00                -1.0  \n",
+      "2013-03-29 00:07:00                -1.0  \n",
+      "2013-03-29 00:08:00                -1.0  \n",
+      "2013-03-29 00:09:00                -1.0  \n",
+      "2013-03-29 00:10:00                -1.0  \n",
+      "2013-03-29 00:11:00                -1.0  \n",
+      "2013-03-29 00:12:00                -1.0  \n",
+      "2013-03-29 00:13:00                -1.0  \n",
+      "2013-03-29 00:14:00                -1.0  \n",
+      "2013-03-29 00:15:00                -1.0  \n",
+      "2013-03-29 00:16:00                -1.0  \n",
+      "2013-03-29 00:17:00                -1.0  \n",
+      "2013-03-29 00:18:00                -1.0  \n",
+      "2013-03-29 00:19:00                -1.0  \n",
+      "/Users/nsimsiri/Documents/code/ml/MultiRes/student_life/data/training_data/student_life_pickle_35.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "# user_ids = [35, 32, 36, 42, 43, 44, 1, 45]\n",
+    "user_ids = [35]\n",
+    "for user_id in user_ids:\n",
+    "    pickle_path = student_life_path + '/data/training_data/student_life_pickle_{}.pkl'.format(user_id)\n",
+    "    data = student_life_var_binned_data_manager.get_data_for_training_in_dict_format(user_id)\n",
+    "    with open(pickle_path, 'wb') as outfile:\n",
+    "        pickle.dump(data, outfile)\n",
+    "        print(pickle_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'day_of_week', 'epoch_of_day', 'time_since_last_label', 'time_to_next_label'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## these are the missing delta/missing columns - breaks TBM\n",
+    "a =  ['student_id', 'activity_inference_min', 'activity_inference_max', 'activity_inference_mode', 'audio_activity_inference_min', 'audio_activity_inference_max', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'dark_duration_min_sum', 'hours_slept_sum', 'sleep_rating_sum', 'latitude_mode', 'longitude_mode', 'stress_level_mode']\n",
+    "b = ['day_of_week', 'epoch_of_day', 'time_since_last_label', 'time_to_next_label', 'activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'dark_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'latitude_mode', 'longitude_mode', 'hours_slept_sum', 'sleep_rating_sum']\n",
+    "a = set(a)\n",
+    "b = set(b)\n",
+    "b.difference(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded /Users/nsimsiri/Documents/code/ml/MultiRes/student_life/data/training_data/student_life_pickle_35.pkl with \n",
+      "\tkeys: dict_keys(['train_ids', 'val_ids', 'test_ids', 'data'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_list = []\n",
     "\n",
-    "outfile = open(pickle_path, 'wb')\n",
-    "pickle.dump(data, outfile)\n",
-    "outfile.close()"
+    "for user_id in user_ids:\n",
+    "    data = None\n",
+    "    pickle_path = student_life_path + '/data/training_data/student_life_pickle_{}.pkl'.format(user_id)\n",
+    "    with open(pickle_path, 'rb') as pickle_file:\n",
+    "        data = pickle.load(pickle_file)\n",
+    "    print('loaded {} with \\n\\tkeys: {}'.format(pickle_path, data.keys()))\n",
+    "    data_list.append(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['35_3_29', '35_3_30', '35_3_31', '35_4_2', '35_4_3', '35_4_4', '35_4_5', '35_4_6', '35_4_9', '35_4_10', '35_4_11', '35_4_12', '35_4_13', '35_4_14', '35_4_15', '35_4_16', '35_4_18', '35_4_20', '35_4_21', '35_4_23', '35_4_29', '35_4_30', '35_5_2', '35_5_7', '35_5_8', '35_5_12', '35_5_19', '35_5_21', '35_5_22'])\n"
+      "data --> dict_keys(['train_ids', 'val_ids', 'test_ids', 'data'])\n",
+      "1 datapoint: 4 keys: (features: List, mask: List, delta: List, stress) \n",
+      "\n",
+      "SID: 35 - train: 17, val: 6, test: 5, total: 28\n",
+      "\n",
+      "Day 35_3_29 - feats=1440, masks=1440, deltas=1440 \n",
+      "stress=1\n",
+      "\n",
+      "feats sample -  [-1.0, -1.0, -1.0, -1.0, 0.0, -1.0, 0.0, 814.0, 490.0, 699.0, 43.70519274, -72.28314014, 13.0, 3.0]\n",
+      "\n",
+      "mask sample -  [nan, nan, nan, nan, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "\n",
+      "delta sample -  [nan, nan, nan, nan, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
    "source": [
-    "print(data['data'].keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'dict'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open(pickle_path, 'rb') as pickle_file:\n",
-    "    data = pk.load(pickle_file)\n",
-    "    print(type(data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "dict_keys(['train_ids', 'val_ids', 'test_ids', 'data'])\n",
-      "17\n",
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(data))\n",
-    "print(data.keys())\n",
-    "print(len(data['train_ids']))\n",
-    "print(len(data['val_ids']))\n",
+    "sample_idx = user_ids.index(35)\n",
+    "data = data_list[sample_idx]\n",
+    "# data --> {'train_ids', 'test_ids', 'val_ids', 'data'}\"\n",
+    "print(\"data --> \" + str(data.keys()))\n",
+    "# data[*_ids] --> 'day 1', 'day 2', etc...\n",
+    "day_key = data['train_ids'][0] # sample\n",
+    "# data['data'][day] --> (features: List, mask: List, delta: List, stress) \n",
+    "data_i = data['data'][day_key]\n",
+    "feats, masks, deltas, stress = data_i\n",
+    "print(\"1 datapoint: \" + str(len(data_i)) + \" keys: (features: List, mask: List, delta: List, stress) \")\n",
+    "print(\"\")\n",
+    "\n",
+    "print(\"SID: {} - train: {}, val: {}, test: {}, total: {}\".format(user_ids[sample_idx],\n",
+    "                                                       len(data['train_ids']),\n",
+    "                                                       len(data['val_ids']),\n",
+    "                                                       len(data['test_ids']),\n",
+    "                                                       len(data['data'])))\n",
+    "\n",
+    "\n",
+    "print(\"\\nDay {} - feats={}, masks={}, deltas={} \\nstress={}\"\n",
+    "      .format(day_key, len(feats), len(masks), len(deltas), stress))\n",
+    "\n",
+    "print()\n",
+    "print(\"feats sample - \", feats[0])\n",
+    "print()\n",
+    "print(\"mask sample - \", masks[0])\n",
+    "print()\n",
+    "print(\"delta sample - \", deltas[0])\n",
     "\n"
    ]
   },
