--- a/student_life/notebooks/stress-historgram-cluster.ipynb
+++ b/student_life/notebooks/stress-historgram-cluster.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -235,51 +235,42 @@
      "output_type": "stream",
      "text": [
       "[2, 2, 2, 2, 2, 0, 2, 0, 2, 2, 2, 0, 2, 2, 0, 2, 0, 0, 2, 2, 2, 2, 2, 0, 2, 2, 2, 0, 2, 2, 2, 0, 0, 2, 2, 2, 2, 2, 0, 2, 0, 2, 2, 0, 0, 1]\n",
-      "{2: [0, 1, 2, 3, 4, 6, 8, 9, 10, 12, 13, 15, 18, 19, 20, 21, 22, 24, 25, 26, 28, 29, 30, 33, 34, 35, 36, 37, 39, 41, 42], 0: [5, 7, 11, 14, 16, 17, 23, 27, 31, 32, 38, 40, 43, 44], 1: [45]}\n"
+      "{2: [0, 1, 2, 3, 4, 6, 8, 9, 10, 12, 13, 15, 18, 19, 20, 21, 22, 24, 25, 26, 28, 29, 30, 33, 34, 35, 36, 37, 39, 41, 42], 0: [5, 7, 11, 14, 16, 17, 23, 27, 31, 32, 38, 40, 43, 44], 1: [45]}\n",
+      "OrderedDict([   (0, [5, 7, 11, 14, 16, 17, 23, 27, 31, 32, 38, 40, 43, 44]),\n",
+      "                (1, [45]),\n",
+      "                (   2,\n",
+      "                    [   0,\n",
+      "                        1,\n",
+      "                        2,\n",
+      "                        3,\n",
+      "                        4,\n",
+      "                        6,\n",
+      "                        8,\n",
+      "                        9,\n",
+      "                        10,\n",
+      "                        12,\n",
+      "                        13,\n",
+      "                        15,\n",
+      "                        18,\n",
+      "                        19,\n",
+      "                        20,\n",
+      "                        21,\n",
+      "                        22,\n",
+      "                        24,\n",
+      "                        25,\n",
+      "                        26,\n",
+      "                        28,\n",
+      "                        29,\n",
+      "                        30,\n",
+      "                        33,\n",
+      "                        34,\n",
+      "                        35,\n",
+      "                        36,\n",
+      "                        37,\n",
+      "                        39,\n",
+      "                        41,\n",
+      "                        42])])\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "OrderedDict([(0, [5, 7, 11, 14, 16, 17, 23, 27, 31, 32, 38, 40, 43, 44]),\n",
-       "             (1, [45]),\n",
-       "             (2,\n",
-       "              [0,\n",
-       "               1,\n",
-       "               2,\n",
-       "               3,\n",
-       "               4,\n",
-       "               6,\n",
-       "               8,\n",
-       "               9,\n",
-       "               10,\n",
-       "               12,\n",
-       "               13,\n",
-       "               15,\n",
-       "               18,\n",
-       "               19,\n",
-       "               20,\n",
-       "               21,\n",
-       "               22,\n",
-       "               24,\n",
-       "               25,\n",
-       "               26,\n",
-       "               28,\n",
-       "               29,\n",
-       "               30,\n",
-       "               33,\n",
-       "               34,\n",
-       "               35,\n",
-       "               36,\n",
-       "               37,\n",
-       "               39,\n",
-       "               41,\n",
-       "               42])])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -292,7 +283,7 @@
     "    else: d[x] = [i]\n",
     "print(d)\n",
     "import collections\n",
-    "collections.OrderedDict(sorted(d.items()))"
+    "pp.pprint(collections.OrderedDict(sorted(d.items())))"
    ]
   },
   {
