pulling natcha branch

--- a/student_life/notebooks/generate_student_life_pickle.ipynb
+++ b/student_life/notebooks/generate_student_life_pickle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -41,71 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "missing True\n",
-      "total:\n",
-      " ['day_of_week', 'epoch_of_day', 'time_since_last_label', 'time_to_next_label', 'activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'dark_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'latitude_mode', 'longitude_mode', 'hours_slept_sum', 'sleep_rating_sum']\n",
-      "\n",
-      "student_data\n",
-      " ['student_id', 'activity_inference_min', 'activity_inference_max', 'activity_inference_mode', 'audio_activity_inference_min', 'audio_activity_inference_max', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'dark_duration_min_sum', 'hours_slept_sum', 'sleep_rating_sum', 'latitude_mode', 'longitude_mode', 'stress_level_mode']\n",
-      "\n",
-      "missing_values\n",
-      " ['student_id', 'activity_inference_min', 'activity_inference_max', 'activity_inference_mode', 'audio_activity_inference_min', 'audio_activity_inference_max', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'dark_duration_min_sum', 'hours_slept_sum', 'sleep_rating_sum', 'latitude_mode', 'longitude_mode', 'stress_level_mode']\n",
-      "\n",
-      "training_values\n",
-      " ['day_of_week', 'epoch_of_day', 'time_since_last_label', 'time_to_next_label', 'activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'dark_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'latitude_mode', 'longitude_mode', 'hours_slept_sum', 'sleep_rating_sum']\n",
-      "\n",
-      "missing_values\n",
-      " ['day_of_week', 'epoch_of_day', 'time_since_last_label', 'time_to_next_label', 'activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum', 'dark_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum', 'latitude_mode', 'longitude_mode', 'hours_slept_sum', 'sleep_rating_sum']\n",
-      "                     day_of_week  epoch_of_day  time_since_last_label  \\\n",
-      "2013-03-29 00:00:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:01:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:02:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:03:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:04:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:05:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:06:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:07:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:08:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:09:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:10:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:11:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:12:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:13:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:14:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:15:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:16:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:17:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:18:00         -1.0          -1.0                   -1.0   \n",
-      "2013-03-29 00:19:00         -1.0          -1.0                   -1.0   \n",
-      "\n",
-      "                     time_to_next_label  \n",
-      "2013-03-29 00:00:00                -1.0  \n",
-      "2013-03-29 00:01:00                -1.0  \n",
-      "2013-03-29 00:02:00                -1.0  \n",
-      "2013-03-29 00:03:00                -1.0  \n",
-      "2013-03-29 00:04:00                -1.0  \n",
-      "2013-03-29 00:05:00                -1.0  \n",
-      "2013-03-29 00:06:00                -1.0  \n",
-      "2013-03-29 00:07:00                -1.0  \n",
-      "2013-03-29 00:08:00                -1.0  \n",
-      "2013-03-29 00:09:00                -1.0  \n",
-      "2013-03-29 00:10:00                -1.0  \n",
-      "2013-03-29 00:11:00                -1.0  \n",
-      "2013-03-29 00:12:00                -1.0  \n",
-      "2013-03-29 00:13:00                -1.0  \n",
-      "2013-03-29 00:14:00                -1.0  \n",
-      "2013-03-29 00:15:00                -1.0  \n",
-      "2013-03-29 00:16:00                -1.0  \n",
-      "2013-03-29 00:17:00                -1.0  \n",
-      "2013-03-29 00:18:00                -1.0  \n",
-      "2013-03-29 00:19:00                -1.0  \n",
+      "missing False\n",
       "/Users/nsimsiri/Documents/code/ml/MultiRes/student_life/data/training_data/student_life_pickle_35.pkl\n"
      ]
     }
@@ -148,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -189,11 +132,11 @@
       "Day 35_3_29 - feats=1440, masks=1440, deltas=1440 \n",
       "stress=1\n",
       "\n",
-      "feats sample -  [-1.0, -1.0, -1.0, -1.0, 0.0, -1.0, 0.0, 814.0, 490.0, 699.0, 43.70519274, -72.28314014, 13.0, 3.0]\n",
+      "feats sample -  [0.0, -1.0, 0.0, 814.0, 490.0, 699.0, 43.70519274, -72.28314014, 13.0, 3.0]\n",
       "\n",
-      "mask sample -  [nan, nan, nan, nan, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "mask sample -  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
       "\n",
-      "delta sample -  [nan, nan, nan, nan, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
+      "delta sample -  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
