--- a/Physionet_rev/sandbox.ipynb
+++ b/Physionet_rev/sandbox.ipynb
@@ -153,15 +153,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3333333333333333 0.4505999999999999 0.008071231924854148\n",
-      "(0.4347614869514347, 0.4664385130485651)\n"
+      "0.3333333333333333 0.4534 0.008038224496308439\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-187-a50105444468>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrams\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbootstrap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;31m# ac, ag = bootstrap1(a)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;31m# bc, bg = bootstrap1(b)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-187-a50105444468>\u001b[0m in \u001b[0;36mbootstrap\u001b[0;34m(A, B)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mlo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0mlo\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mg\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mhi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
      ]
     }
    ],
@@ -186,8 +197,34 @@
     "    mu = np.mean(grams)\n",
     "    print(np.mean(A), mu, std)\n",
     "    conf = stats.t.interval(0.95, len(grams)-1, loc=mu, scale=std)\n",
-    "    print(conf)\n",
-    "bootstrap(a, b)"
+    "    lo, hi = conf\n",
+    "    g = np.array(grams)\n",
+    "    print(g[g>lo and g < hi])\n",
+    "    return conf\n",
+    "    \n",
+    "def bootstrap1(A):\n",
+    "    grams = []\n",
+    "    for t in range(T):\n",
+    "        sample = np.random.choice(A, N)\n",
+    "        gram = np.mean(sample)\n",
+    "        grams.append(gram)\n",
+    "    grams.sort()\n",
+    "    std = stats.sem(grams)\n",
+    "    mu = np.mean(grams)\n",
+    "    print(np.mean(A), mu, std)\n",
+    "    conf = stats.t.interval(0.95, len(grams)-1, loc=mu, scale=std)\n",
+    "    return conf, grams\n",
+    "\n",
+    "print(bootstrap(a, b))\n",
+    "# ac, ag = bootstrap1(a)\n",
+    "# bc, bg = bootstrap1(b)\n",
+    "# print()\n",
+    "# print(ac)\n",
+    "# print(bc)\n",
+    "# print()\n",
+    "\n",
+    "out = scipy.stats.ttest_ind(ag, bg)\n",
+    "print(out)\n"
    ]
   },
   {
