Visualiztion of features against stress throgh Bokeh.

--- a/student_life/notebooks/sutdent_life_binned_data_visualization.ipynb
+++ b/student_life/notebooks/sutdent_life_binned_data_visualization.ipynb
@@ -2,14 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'src.bin.plotting' from '/media/abhinav/Projects/MultiRes/student_life/src/bin/plotting.py'>"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import bokeh\n",
+    "\n",
+    "from bokeh.plotting import figure, show, output_file\n",
     "\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "\n",
@@ -19,18 +34,110 @@
     "from src import definitions\n",
     "from IPython.display import display\n",
     "from src.utils import read_utils as reader\n",
-    "from src.utils import student_utils"
+    "from src.utils import student_utils\n",
+    "from src.utils import data_conversion_utils as conversions\n",
+    "from src.bin import plotting\n",
+    "\n",
+    "from importlib import reload\n",
+    "\n",
+    "reload(plotting)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['student_id', 'day_of_week', 'epoch_of_day', 'time_since_last_label',\n",
+      "       'time_to_next_label', 'previous_stress_label', 'time_to_next_deadline',\n",
+      "       'activity_inference_mode', 'activity_inference_inferred_feature',\n",
+      "       'audio_activity_inference_mode',\n",
+      "       'audio_activity_inference_inferred_feature', 'sms_instance_count',\n",
+      "       'conv_duration_min_inferred_mode',\n",
+      "       'phonecharge_duration_min_inferred_mode',\n",
+      "       'phonelock_duration_min_inferred_mode',\n",
+      "       'dark_duration_min_inferred_mode', 'hours_slept_robust_sum',\n",
+      "       'sleep_rating_robust_sum', 'latitude_mode', 'longitude_mode',\n",
+      "       'stress_level_mode'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "students = student_utils.get_available_students(definitions.BINNED_ON_VAR_FREQ_DATA_PATH)\n",
+    "students = [53]\n",
+    "data = student_utils.get_var_binned_data_for_students(*students)\n",
+    "students_data = data[0]\n",
+    "actual_data = data[0]\n",
+    "print(actual_data.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "students = student_utils.get_available_students(definitions.BINNED_ON_VAR_FREQ_DATA_PATH)\n",
-    "data = student_utils.get_var_binned_data_for_students(*students)\n",
-    "students_data = data[0]"
+    "bokeh_data = actual_data\n",
+    "bokeh_data = conversions.normalize(actual_data, norm_type='min_max')\n",
+    "\n",
+    "line_color=['#FF0000', '#4682B4']\n",
+    "line_alpha = [1, 0.5]\n",
+    "line_width = [1, 1]\n",
+    "\n",
+    "x_axis_list = [bokeh_data.index, bokeh_data.index]\n",
+    "y_axis_data = [bokeh_data.previous_stress_label, \n",
+    "               bokeh_data.time_to_next_deadline]\n",
+    "plotting.plot_line_chart_using_bokeh(x_axis_list, y_axis_data, line_color, \n",
+    "                                    'stress_vs_dead_lines', \"data_visualization/stress_vs_dead_lines.html\", \n",
+    "                                    show_fig=True,\n",
+    "                                    line_width=line_width,\n",
+    "                                    line_alpha=line_alpha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bokeh_data = actual_data.loc['2013-03-29': '2013-04-09', :]\n",
+    "bokeh_data = conversions.normalize(bokeh_data, norm_type='min_max')\n",
+    "line_width = [1, 0.2]\n",
+    "\n",
+    "x_axis_list = [bokeh_data.index, bokeh_data.index]\n",
+    "y_axis_data = [bokeh_data.previous_stress_label, \n",
+    "               bokeh_data.conv_duration_min_inferred_mode]\n",
+    "plotting.plot_line_chart_using_bokeh(x_axis_list, y_axis_data, line_color, \n",
+    "                                     'stress_vs_conv', \"data_visualization/stress_vs_conv.html\", \n",
+    "                                     show_fig=True,\n",
+    "                                     plot_width=1400,\n",
+    "                                     line_width=line_width,\n",
+    "                                     line_alpha=line_alpha)\n",
+    "\n",
+    "x_axis_list = [bokeh_data.index, bokeh_data.index]\n",
+    "y_axis_data = [bokeh_data.previous_stress_label, \n",
+    "               bokeh_data.activity_inference_inferred_feature]\n",
+    "plotting.plot_line_chart_using_bokeh(x_axis_list, y_axis_data, line_color, \n",
+    "                                    'stress_vs_activity', \"data_visualization/stress_vs_activity.html\", \n",
+    "                                    show_fig=True,\n",
+    "                                    plot_width=1400,\n",
+    "                                    line_width=line_width,\n",
+    "                                    line_alpha=line_alpha)\n",
+    "\n",
+    "x_axis_list = [bokeh_data.index, bokeh_data.index]\n",
+    "y_axis_data = [bokeh_data.previous_stress_label, \n",
+    "               bokeh_data.audio_activity_inference_mode]\n",
+    "plotting.plot_line_chart_using_bokeh(x_axis_list, y_axis_data, line_color, \n",
+    "                                    'stress_vs_audio', \"data_visualization/stress_vs_audio.html\", \n",
+    "                                    show_fig=True,\n",
+    "                                    plot_width=1400,\n",
+    "                                    line_width=line_width,\n",
+    "                                    line_alpha=line_alpha)\n"
    ]
   },
   {
@@ -57,7 +164,7 @@
     "                                        bins=10, \n",
     "                                        alpha=1, \n",
     "                                        stacked=False, \n",
-    "                                       xticks=[0 ,1, 2, 3, 4])\n",
+    "                                        xticks=[0 ,1, 2, 3, 4])\n",
     "plt.title(\"Stress Distribution\")\n",
     "plt.xlabel('Stress')\n",
     "plt.savefig(\"data_visualization/stress_labels_distribution.png\", format='png')\n",
